--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "state-machine-semaphore",
+  "name": "@dontirun/state-machine-semaphore",
+  "description": "Create distributed semaphores using AWS Step Functions and Amazon DynamoDB to control concurrent invocations of contentious work.",
   "repository": {
     "type": "git",
     "url": "https://github.com/dontirun/state-machine-semaphore.git"
@@ -16,7 +17,9 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
     "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -39,7 +42,8 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.22.0",
+    "cdk-nag": "^2.15.32",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -59,11 +63,14 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.22.0",
     "constructs": "^10.0.5"
   },
   "keywords": [
-    "cdk"
+    "cdk",
+    "dynamodb",
+    "state machine",
+    "step functions"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -112,7 +119,16 @@
   "stability": "stable",
   "jsii": {
     "outdir": "dist",
-    "targets": {},
+    "targets": {
+      "python": {
+        "distName": "state-machine-semaphore",
+        "module": "state_machine_semaphore"
+      },
+      "dotnet": {
+        "namespace": "Dontirun.StateMachineSemaphore",
+        "packageId": "Dontirun.StateMachineSemaphore"
+      }
+    },
     "tsc": {
       "outDir": "lib",
       "rootDir": "src"
