feat: throw Error when specifying `tableReadWriteCapacity` after first instantiation per stack

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:dotnet": "npx projen package:dotnet",
+    "package:java": "npx projen package:java",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
@@ -120,6 +121,13 @@
   "jsii": {
     "outdir": "dist",
     "targets": {
+      "java": {
+        "package": "io.github.dontirun.statemachinesemaphore",
+        "maven": {
+          "groupId": "io.github.dontirun",
+          "artifactId": "statemachinesemaphore"
+        }
+      },
       "python": {
         "distName": "state-machine-semaphore",
         "module": "state_machine_semaphore"
