--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:dotnet": "npx projen package:dotnet",
+    "package:go": "npx projen package:go",
     "package:java": "npx projen package:java",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
@@ -135,6 +136,9 @@
       "dotnet": {
         "namespace": "Dontirun.StateMachineSemaphore",
         "packageId": "Dontirun.StateMachineSemaphore"
+      },
+      "go": {
+        "moduleName": "github.com/dontirun/state-machine-semaphore-go"
       }
     },
     "tsc": {
